Fixed invisible secundairy tabs and mesages on 'activiteiten'

--- a/less/menu.less
+++ b/less/menu.less
@@ -192,6 +192,10 @@ a.fa {
   -webkit-box-shadow: inset 0px 0px 6px @grey-dark;
   box-shadow: inset 0px 0px 6px @grey-dark;
 }
+#tabs2 {
+  position: relative;
+  z-index: 3;
+}
 ul.primary, ul.primary li, ul.secondary, ul.secondary li {
   border-color: @white;
   border-style: none;
