--- a/less/nodes.less
+++ b/less/nodes.less
@@ -234,7 +234,7 @@
     display: none;
   }
 }
-.admininfo {
+.admininfo, .messages {
   position: relative;
   z-index: 3;
 }
